# instant

./: Cargo.toml  README.md
.circleci/: config.yml
src/: lib.rs  native.rs  wasm.rs
tests/: tests.rs  wasm.rs
