[package]
name = "instant"
version = "0.1.3"
authors = ["sebcrozet <developer@crozet.re>"]
description = "A partial replacement for std::time::Instant that works on WASM too."
repository = "https://github.com/sebcrozet/instant"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [ "time", "wasm" ]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = { version = "0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"

